--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -8,10 +8,16 @@
     = f.text_field :name, required: true, class: "form-control"
 
   .form-group.col-md-6
-    = f.label :available_invitation_count, "Available invitations"
-    = f.number_field :available_invitation_count, class: "form-control"
-    %p.text-success
-      = "Invitations sent: #{@organization.sent_invitation_count}"
+    - if @organization.restrict_invitations?
+      = f.label :available_invitation_count, "Available invitations"
+      = f.number_field :available_invitation_count, class: "form-control"
+      %p.text-success
+        = "Invitations sent: #{@organization.sent_invitation_count}"
+    - else
+      .d-md-block.d-none
+        %label &nbsp;
+        .text-form-control
+          Whitelisted domain with passwordless sign in, no invite restrictions
 .row
   .col-md-6
     .form-group
