wip, mostly there

--- a/app/views/organized_mailer/graduated_notification.html.haml
+++ b/app/views/organized_mailer/graduated_notification.html.haml
@@ -16,7 +16,10 @@
 - if organization_message_snippet.present?
   = organization_message_snippet.body.html_safe
 
-= render partial: "shared/email_bike_box"
+- if bikes.count == 1
+  = render partial: "shared/email_bike_box"
+- else
+  - # TODO! update
 
 - if @retrieval_link_url.present?
   .mark-retrieved-box
