improve interaction for bike edit photos save

--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -30,4 +30,4 @@
 
   .edit-form-well-submit-wrapper
     = hidden_field_tag :edit_template, @edit_template
-    = submit_tag t(".save_changes"), class: 'btn btn-lg btn-primary', disabled: is_disabled
+    = submit_tag t(".save_changes"), class: 'btn btn-lg btn-primary saveBikeChanges', disabled: is_disabled
