--- a/app/views/landing_pages/for_community_groups.html.haml
+++ b/app/views/landing_pages/for_community_groups.html.haml
@@ -31,7 +31,7 @@
 
         %p= t(".registrations_are_free_forever_join_bike_")
 
-        %p= t(".purchase_a_pack_of_advocacy_html", link: link_to(t(".here"), 'https://bikeindex.myshopify.com/'))
+        %p= t(".purchase_a_pack_of_advocacy_html", link: link_to(t(".here"), store_path))
 
         %h4= t(".related_articles")
         %ul
