--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -13,7 +13,7 @@
           - if @bike.unregistered_parking_notification?
             %p.strong.text-warning.text-right
               = t(".unregistered_parking_notification")
-          - elsif @bike.organized?(passive_organization)
+          - elsif @passive_organization_registered
             %p.text-success.text-right
               %span.hidden-md-down
                 = t(".bike_is_registered", bike_type: @bike.type, org_name: passive_organization.short_name)
@@ -41,7 +41,7 @@
               %tr
                 %td= t(".permission")
                 %td
-                  - if @bike.authorized_by_organization?(org: passive_organization)
+                  - if @passive_organization_authorized
                     = t(".org_can_edit_bike", org_name: passive_organization.short_name, bike_type: @bike.type)
                     - if @bike.can_edit_claimed_organizations.pluck(:id).include?(passive_organization.id)
                       %em.small
@@ -77,7 +77,7 @@
                 %tr
                   %td{ colspan: 2, style: "text-align: center; font-size: 1rem;" }
                     = t(".added_to_track_parking_notification", bike_type: @bike.type)
-              - elsif @bike.organized?(passive_organization) # Only display information about the bike if bike is registered through org
+              - elsif @passive_organization_registered # Only display information about the bike if bike is registered through org
                 - if passive_organization.parent?
                   %tr
                     %td
@@ -154,7 +154,7 @@
                           - unless @bike.valid_registration_address_present?
                             = t(".missing_address")
 
-          - if !@bike.organized?(passive_organization) # Apologize, bike isn't organizations
+          - if !@passive_organization_registered # Apologize, bike isn't organizations
             %p.less-strong.mt-4
               %em
                 = t(".unable_to_display_additional_information", bike_type: @bike.type, org_name: passive_organization.name)
@@ -243,11 +243,18 @@
 
 
 - # TODO: add translations
+- if passive_organization.enabled?("graduated_notifications")
+  - graduated_notifications = @bike.graduated_notifications(passive_organization).order(id: :desc)
+  - if graduated_notifications.any?
+    .parking-notifications-wrap
+      %h3.mt-2.mb-2 Graduated notifications
+      = render partial: "/organized/graduated_notifications/table", locals: { graduated_notifications: graduated_notifications, skip_bike: true, skip_email: true }
+
+
 - if passive_organization.enabled?("parking_notifications")
   - parking_notifications = passive_organization.parking_notifications.where(bike_id: @bike.id).order(id: :desc)
   .parking-notifications-wrap
-    %h3.mt-2.mb-2
-      Parking notifications
+    %h3.mt-2.mb-2 Parking notifications
 
     - if parking_notifications.any?
       = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.limit(4), skip_bike: true, skip_map_cell: true, render_address: true }
