actually mark remaining

--- a/app/views/organized/graduated_notifications/_table.html.haml
+++ b/app/views/organized/graduated_notifications/_table.html.haml
@@ -46,8 +46,11 @@
             = l(graduated_notification.created_at, format: :convert_time)
         %td
           - if graduated_notification.processed_at.present?
-            %span.convertTime.preciseTime
+            %span.convertTime
               = l(graduated_notification.processed_at, format: :convert_time)
+          - else
+            %small.less-strong.convertTime
+              = l(graduated_notification.pending_period_ends_at, format: :convert_time)
         - unless skip_bike
           %td
             - if graduated_notification.bike.present?
