--- a/app/views/admin/graduated_notifications/index.html.haml
+++ b/app/views/admin/graduated_notifications/index.html.haml
@@ -1,7 +1,7 @@
 .admin-subnav
   .col-md-5
     %h1
-      graduated notifications
+      Graduated notifications
   .col-md-7
     %ul
       %li.nav-item
