--- a/app/views/organized/parking_notifications/_show_details.html.haml
+++ b/app/views/organized/parking_notifications/_show_details.html.haml
@@ -198,7 +198,7 @@
 - if @parking_notification.send_email?
   %h2.uncap.mt-4 Preview of email sent:
   .email-preview.parking-notification-email-preview
-    <iframe src="#{email_organization_parking_notification_path(@parking_notification, organization_id: current_organization.to_param)}"></iframe>
+    <iframe src="#{organization_email_path(@parking_notification.kind, parking_notification_id: @parking_notification.id, organization_id: current_organization.to_param)}"></iframe>
 - else
   %p.text-warning.mt-4
     %em
