--- a/app/views/organized_mailer/graduated_notification.text.haml
+++ b/app/views/organized_mailer/graduated_notification.text.haml
@@ -1,8 +1,6 @@
 Renew Your Bike Registration
 
-- organization_message_snippet = @organization.mail_snippets.enabled.graduated_notification_email.first
-- if @email_preview
-  - organization_message_snippet ||= @organization.mail_snippets.graduated_notification_email.first
+- organization_message_snippet = @organization.mail_snippets.enabled.graduated_notification.first
 
 - if organization_message_snippet.present?
   = organization_message_snippet.body.strip_tags
