--- a/app/views/organized/graduated_notifications/_table.html.haml
+++ b/app/views/organized/graduated_notifications/_table.html.haml
@@ -14,7 +14,7 @@
         = sortable "created_at"
       - else
         Created
-    %th
+    %th.small
       - if render_sortable
         = sortable "processed_at"
       - else
@@ -43,7 +43,7 @@
           - notification_link = graduated_notification.primary_notification_id.present? ? graduated_notification.primary_notification_id : graduated_notification.id
           %a.convertTime.preciseTime{ href: organization_graduated_notification_path(notification_link.to_param, organization_id: graduated_notification.organization_id) }
             = l(graduated_notification.created_at, format: :convert_time)
-        %td
+        %td.small
           - if graduated_notification.processed_at.present?
             %span.convertTime
               = l(graduated_notification.processed_at, format: :convert_time)
