--- a/app/views/organized/emails/edit.html.haml
+++ b/app/views/organized/emails/edit.html.haml
@@ -41,7 +41,7 @@
     = f.label :body, class: "control-label" do
       Custom message to add to the email
       %small HTML is permitted
-    = f.text_area :body, placeholder: "Custom text", class: "form-control"
+    = f.text_area :body, rows: 4, placeholder: "Custom text", class: "form-control"
 
   .form-group
     = f.check_box :is_enabled
